Edited wiki page through web user interface.

--- a/wiki/ImportStandardCCLibraries.wiki
+++ b/wiki/ImportStandardCCLibraries.wiki
@@ -11,7 +11,7 @@ The VIENNA Add-In helps you to automatically download several versions of the st
   # Select _Add-In / VIENNAAddIn / Import Standard CC Libraries_ from the context menu:
     http://vienna-add-in.googlecode.com/svn/wiki/images/ImportStandardCCLibraries_01.gif
   # In the _Standard Core Component Library Importer_ dialog, you can choose the desired version of the CCL from two drop-down lists
-  # After choosing the CCL version, detailed information to the selected version is shown in the _Comments_ section:
+  # After choosing the CCL version, detailed information about the selected version is shown in the _Comments_ section:
     http://vienna-add-in.googlecode.com/svn/wiki/images/ImportStandardCCLibraries_02.gif
   # Finally, click _Import_
   # If there are existing libraries in the current project with the same name as the Core Components Libraries, you will need to confirm that these old liberaries may be overwritten:
