--- a/wiki/HowToMapping.wiki
+++ b/wiki/HowToMapping.wiki
@@ -1,8 +1,8 @@
-#summary How to create a Mapforce Mapping Documentation
-
+#summary How to create a MapForce Mapping Documentation
+This guide shows how to create a very simple MapForce mapping with Altova MapForce which can be used with the [XmlSchemaImporter Xml Schema Importer].
 
 =How to create a basic mapping=
-The simple Xml Schema below will be used to create a Mapforce mapping to CCTS:
+  # The simple Xml Schema below will be used to create a MapForce mapping to CCTS:
 
 {{{
 <?xml version="1.0" encoding="UTF-8"?>
@@ -39,3 +39,29 @@ The simple Xml Schema below will be used to create a Mapforce mapping to CCTS:
 	</xs:complexType>
 </xs:schema>
 }}}
+
+  # On the other hand we will use the Address Core Component from the current CCL (find it [http://code.google.com/p/vienna-add-in/wiki/files_mapping/CoreComponent_1.xsd here]).
+
+  # Adding these Schemas to Altova MapForce will result in the following screen:
+    http://vienna-add-in.googlecode.com/svn/wiki/files_mapping/MapForce_startscreen.png
+  # A mapping between two elements or attributes can be defined by draging a connection between the white triangles next to their name.
+    http://vienna-add-in.googlecode.com/svn/wiki/files_mapping/MapForce_drawmapping.png
+  # The final mapping looks like this:
+    http://vienna-add-in.googlecode.com/svn/wiki/files_mapping/MapForce_mapping.png
+  # Saving this mapping results into a *.mfd file which can be used for the [XmlSchemaImporter Xml Schema Importer].
+
+=References=
+(1) UMM Development Site http://umm-dev.org/
+
+(2) CCTS standard http://www.untmg.org/wp-content/uploads/2008/06/specification_ccts3p0odp620080207.pdf
+
+(3) W3C XML Schema http://www.w3.org/XML/Schema.html
+
+(4) Altova MapForce http://www.altova.com/mapforce.html
+
+=Related Tasks=
+[CreateaModelinEA Create a model in Enterprise Architect]: This page explains how to open a project file and create a model in Enterprise Architect
+
+[GettingStartedVideos Getting Started Videos]: This page contains a few videos explaining common tasks using the VIENNA Add-In
+
+[XmlSchemaImporter Import an XML Schema]: This page explains how to import an XML Schema using the _XML Schema Importer_
