--- a/wiki/XmlSchemaImporter.wiki
+++ b/wiki/XmlSchemaImporter.wiki
@@ -9,7 +9,7 @@ The XML Schema Importer can be used to import an XML Schema into an existing mod
     http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemaimporter/xmlschemaimporter_startscreen.png
   # First you have to select an XML schema which should be imported using the Windows file selection dialog.
     http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemaimporter/xmlschemaimporter_importxsdselected.png
-  # For a successfull import Mapforce Mapping files have to be supplied in the following step. These can be added or removed at any time.
+  # For a successfull import MapForce mapping files have to be supplied in the following step. These can be added or removed at any time. A guideline for creating MapForce mapping files can be found [HowToMapping here].
     http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemaimporter/xmlschemaimporter_mappingfilesselected.png
   # Switching to the CCTS tab, there is only the root XML schema which has to be selected.
     http://vienna-add-in.googlecode.com/svn/wiki/images_xmlschemaimporter/xmlschemaimporter_selectCctsRoot.png
@@ -31,3 +31,5 @@ The XML Schema Importer can be used to import an XML Schema into an existing mod
 [CreateaUpccModel Create your first UPCC model]: This page explains how to create a UPCC model
 
 [GettingStartedVideos Getting Started Videos]: This page contains a few videos explaining common tasks using the VIENNA Add-In
+
+[HowToMapping How to create a MapForce mapping]: This page explains how to create a basic mapping using Altova MapForce
