--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -35,3 +35,4 @@
   * [Storyboards Storyboards]
     * [Presentation VIENNA AddIn Tool Presentation]
     * [PassportModel VIENNA AddIn Passport Modeling]
+  * [publications Publications]
