Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -35,4 +35,5 @@
   * [Storyboards Storyboards]
     * [Presentation VIENNA AddIn Tool Presentation]
     * [PassportModel VIENNA AddIn Passport Modeling]
+  * [UseCases Use Cases]
   * [PublicationsPPI Publications]
