--- a/wiki/PublicationsPPI.wiki
+++ b/wiki/PublicationsPPI.wiki
@@ -12,7 +12,7 @@ Conference and Workshop Papers
   * C. Eis, C. Huemer, P. Liegl, C. Pichler, and M. Strommer. A Framework for Managing the Complexity of Business Document Integration. In Proceedings of the eChallenges e-2009 Conference and Exhibition, October 21-23, Istanbul, Turkey, pages 1-8, 2009 ([http://publik.tuwien.ac.at/files/PubDat_178392.pdf download])
   * P. Liegl and D. Mayrhofer. A Domain Specific Language for UN/CEFACT's Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 123-131. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177768.pdf download])
   * C. Eis, P. Liegl, C. Pichler, and M. Strommer. An Evaluation of Mapping Strategies for Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 140-149. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177766.pdf download])
-  * P. Liegl, C. Huemer, and M. Zapletal. Towards a global business document reference ontology. In Proceedings of the Third IEEE International Conference on Semantic Computing (ICSC2009), September 14-16, Berkeley, CA, USA, pages 355-360. IEEE, 2009
+  * P. Liegl, C. Huemer, and M. Zapletal. Towards a global business document reference ontology. In Proceedings of the Third IEEE International Conference on Semantic Computing (ICSC2009), September 14-16, Berkeley, CA, USA, pages 355-360. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177763.pdf download])
   * P. Liegl. Conceptual Business Document Modeling using UN/CEFACT's Core Components. In Proceedings of the 6th Asia-Pacific Conference on Conceptual Modeling (APCCM2009), January 20-23, Wellington, New Zealand, pages 59-69. Australian Computer Society, 2009
   * C. Huemer, P. Liegl, T. Motal, R. Schuster, and M. Zapletal. The Development Process of the UN/CEFACT Modeling Methodology. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-10. ACM, 2008
   * C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. A 3-level e-Business Registry Meta Model. In Proceedings of the IEEE International Conference on Services Computing (SCC2008), July 8-11, Honolulu, HI, USA, pages 450-451. IEEE, 2008
