--- a/wiki/PublicationsPPI.wiki
+++ b/wiki/PublicationsPPI.wiki
@@ -13,10 +13,10 @@ Conference and Workshop Papers
   * P. Liegl and D. Mayrhofer. A Domain Specific Language for UN/CEFACT's Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 123-131. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177768.pdf download])
   * C. Eis, P. Liegl, C. Pichler, and M. Strommer. An Evaluation of Mapping Strategies for Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 140-149. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177766.pdf download])
   * P. Liegl, C. Huemer, and M. Zapletal. Towards a global business document reference ontology. In Proceedings of the Third IEEE International Conference on Semantic Computing (ICSC2009), September 14-16, Berkeley, CA, USA, pages 355-360. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177763.pdf download])
-  * P. Liegl. Conceptual Business Document Modeling using UN/CEFACT's Core Components. In Proceedings of the 6th Asia-Pacific Conference on Conceptual Modeling (APCCM2009), January 20-23, Wellington, New Zealand, pages 59-69. Australian Computer Society, 2009
-  * C. Huemer, P. Liegl, T. Motal, R. Schuster, and M. Zapletal. The Development Process of the UN/CEFACT Modeling Methodology. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-10. ACM, 2008
-  * C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. A 3-level e-Business Registry Meta Model. In Proceedings of the IEEE International Conference on Services Computing (SCC2008), July 8-11, Honolulu, HI, USA, pages 450-451. IEEE, 2008
-  * P. Liegl. Business documents in a service oriented context. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-5, 2008
-  * P. Liegl, T. Motal, and R. Schuster. An Add-In for UN/CEFACT's Modeling Methodology 2.0. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-2, 2008
-  * C. Huemer and P. Liegl. A UML Profile for Core Components and their Transformation to XSD. In Proceedings of the 2nd International Workshop on Services Engineering (SEIW 2007), April 16, Istanbul, Turkey, pages 298-306. IEEE, 2007
-  * B. Hofreiter, C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. UN/CEFACT's Modeling Methodology (UMM): A UML Profile for B2B e-Commerce. In Proceedings of the 2nd International Workshop on Best Practices of UML (ER BP-UML'06), November 6-9, Tucson, AZ, USA, pages 19-31. IEEE, 2006
+  * P. Liegl. Conceptual Business Document Modeling using UN/CEFACT's Core Components. In Proceedings of the 6th Asia-Pacific Conference on Conceptual Modeling (APCCM2009), January 20-23, Wellington, New Zealand, pages 59-69. Australian Computer Society, 2009 ([http://publik.tuwien.ac.at/files/PubDat_173511.pdf download])
+  * C. Huemer, P. Liegl, T. Motal, R. Schuster, and M. Zapletal. The Development Process of the UN/CEFACT Modeling Methodology. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-10. ACM, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166115.pdf download])
+  * C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. A 3-level e-Business Registry Meta Model. In Proceedings of the IEEE International Conference on Services Computing (SCC2008), July 8-11, Honolulu, HI, USA, pages 450-451. IEEE, 2008 ([http://publik.tuwien.ac.at/files/PubDat_165760.pdf download])
+  * P. Liegl. Business documents in a service oriented context. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-5, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166117.pdf download])
+  * P. Liegl, T. Motal, and R. Schuster. An Add-In for UN/CEFACT's Modeling Methodology 2.0. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-2, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166116.pdf download])
+  * C. Huemer and P. Liegl. A UML Profile for Core Components and their Transformation to XSD. In Proceedings of the 2nd International Workshop on Services Engineering (SEIW 2007), April 16, Istanbul, Turkey, pages 298-306. IEEE, 2007 ([http://www.big.tuwien.ac.at/research/publications/2007/2207.pdf download])
+  * B. Hofreiter, C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. UN/CEFACT's Modeling Methodology (UMM): A UML Profile for B2B e-Commerce. In Proceedings of the 2nd International Workshop on Best Practices of UML (ER BP-UML'06), November 6-9, Tucson, AZ, USA, pages 19-31. IEEE, 2006 ([http://www.ec.tuwien.ac.at/~marco/pub/A_UML_Profile_For_B2B_eCommerce.pdf download])
