Edited wiki page UseCases through web user interface.

--- a/wiki/UseCases.wiki
+++ b/wiki/UseCases.wiki
@@ -2,4 +2,4 @@
 
 = Use Cases=
 
-  * [Media:http://vienna-add-in.googlecode.com/svn/wiki/publications/xmlschema2ccts.pdf Mapping XML Schema to CCTS Whitepaper]
+  * [[http://vienna-add-in.googlecode.com/svn/wiki/publications/xmlschema2ccts.pdf Mapping XML Schema to CCTS Whitepaper]]
