Edited wiki page UseCases through web user interface.

--- a/wiki/UseCases.wiki
+++ b/wiki/UseCases.wiki
@@ -2,4 +2,4 @@
 
 = Use Cases=
 
-  * [publications/xmlschema2ccts.pdf Mapping XML Schema to CCTS Whitepaper]
+  * [./publications/xmlschema2ccts.pdf Mapping XML Schema to CCTS Whitepaper]
