--- a/wiki/UseCases.wiki
+++ b/wiki/UseCases.wiki
@@ -2,4 +2,4 @@
 
 = Use Cases=
 
-  * [./publications/xmlschema2ccts.pdf Mapping XML Schema to CCTS Whitepaper]
+  * [http://code.google.com/p/vienna-add-in/wiki/publications/xmlschema2ccts.pdf Mapping XML Schema to CCTS Whitepaper]
