--- a/wiki/UseCases.wiki
+++ b/wiki/UseCases.wiki
@@ -2,4 +2,4 @@
 
 = Use Cases=
 
-  * [http://code.google.com/p/vienna-add-in/downloads/detail?name=xmlschema2ccts.pdf Mapping XML Schema to CCTS Whitepaper]
+  * [http://vienna-add-in.googlecode.com/files/xmlschema2ccts.pdf Mapping XML Schema to CCTS Whitepaper]
