Edited wiki page PublicationsPPI through web user interface.

--- a/wiki/PublicationsPPI.wiki
+++ b/wiki/PublicationsPPI.wiki
@@ -7,8 +7,8 @@ Conference and Workshop Papers
   * C. Pichler, M. Strommer, and C. Huemer. Size Matters!? Measuring the Complexity of XML Schema Mapping Models. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), July 5 -10, Miami, Florida, 2010. (to appear)
   * C. Pichler, M. Seidl, and C. Huemer. Managing Variability and Evolution of Business Document Models. In 2nd International Workshop on Model-Driven Product Line Engineering (MDPLE), June 15 - 18, Paris, France, 2010. ([http://ceur-ws.org/Vol-625/MDPLE2010-paper6-Pichler.pdf download])
   * C. Pichler. A Framework for Handling Variants of Software Models. In Proceedings of the International Conference on Software Engineering (ICSE), May 2 - 8, Cape Town, South Africa, pages 345-346. ACM/IEEE, 2010
-  * C. Pichler, M. Strommer, and P. Liegl. On Mapping Business Document Models to Core Components. In Proceedings of the Hawaii Interna- tional Conference on System Sciences (HICSS-43), January 5-8, Kauai, HI, USA, pages 1-10. IEEE, 2010
-  * C. Huemer, P. Liegl, and C. Pichler. A registry model for UN/CEFACT's Core Components. In Proceedings of IEEE International Conference on Service-Oriented Computing and Applications (SOCA'09), December 14-15, Taipei, Taiwan. IEEE, 2009
+  * C. Pichler, M. Strommer, and P. Liegl. On Mapping Business Document Models to Core Components. In Proceedings of the Hawaii Interna- tional Conference on System Sciences (HICSS-43), January 5-8, Kauai, HI, USA, pages 1-10. IEEE, 2010 ([http://publik.tuwien.ac.at/files/PubDat_178389.pdf download])
+  * C. Huemer, P. Liegl, and C. Pichler. A registry model for UN/CEFACT's Core Components. In Proceedings of IEEE International Conference on Service-Oriented Computing and Applications (SOCA'09), December 14-15, Taipei, Taiwan. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_178390.pdf download])
   * C. Eis, C. Huemer, P. Liegl, C. Pichler, and M. Strommer. A Framework for Managing the Complexity of Business Document Integration. In Proceedings of the eChallenges e-2009 Conference and Exhibition, October 21-23, Istanbul, Turkey, pages 1-8, 2009 ([http://publik.tuwien.ac.at/files/PubDat_178392.pdf download])
   * P. Liegl and D. Mayrhofer. A Domain Specific Language for UN/CEFACT's Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 123-131. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177768.pdf download])
   * C. Eis, P. Liegl, C. Pichler, and M. Strommer. An Evaluation of Mapping Strategies for Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 140-149. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177766.pdf download])
