--- a/wiki/PublicationsPPI.wiki
+++ b/wiki/PublicationsPPI.wiki
@@ -3,20 +3,20 @@
 =Publications=
 
 Conference and Workshop Papers
-  * P. Liegl, M. Zapletal, C. Pichler, and M. Strommer. State-of-the-art in business document standards. In Proceedings of the 8th IEEE International Conference on Industrial Informatics (INDIN2010), July 14-16, Osaka, Japan, 2010.([http://publik.tuwien.ac.at/files/PubDat_186928.pdf download])
+  * P. Liegl, M. Zapletal, C. Pichler, and M. Strommer. State-of-the-art in business document standards. In Proceedings of the 8th IEEE International Conference on Industrial Informatics (INDIN2010), July 14-16, Osaka, Japan, 2010.([http://publik.tuwien.ac.at/files/PubDat_186928.pdf pdf])
   * C. Pichler, M. Strommer, and C. Huemer. Size Matters!? Measuring the Complexity of XML Schema Mapping Models. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), July 5 -10, Miami, Florida, 2010. (to appear)
-  * C. Pichler, M. Seidl, and C. Huemer. Managing Variability and Evolution of Business Document Models. In 2nd International Workshop on Model-Driven Product Line Engineering (MDPLE), June 15 - 18, Paris, France, 2010. ([http://ceur-ws.org/Vol-625/MDPLE2010-paper6-Pichler.pdf download])
+  * C. Pichler, M. Seidl, and C. Huemer. Managing Variability and Evolution of Business Document Models. In 2nd International Workshop on Model-Driven Product Line Engineering (MDPLE), June 15 - 18, Paris, France, 2010. ([http://ceur-ws.org/Vol-625/MDPLE2010-paper6-Pichler.pdf pdf])
   * C. Pichler. A Framework for Handling Variants of Software Models. In Proceedings of the International Conference on Software Engineering (ICSE), May 2 - 8, Cape Town, South Africa, pages 345-346. ACM/IEEE, 2010
-  * C. Pichler, M. Strommer, and P. Liegl. On Mapping Business Document Models to Core Components. In Proceedings of the Hawaii Interna- tional Conference on System Sciences (HICSS-43), January 5-8, Kauai, HI, USA, pages 1-10. IEEE, 2010 ([http://publik.tuwien.ac.at/files/PubDat_178389.pdf download])
-  * C. Huemer, P. Liegl, and C. Pichler. A registry model for UN/CEFACT's Core Components. In Proceedings of IEEE International Conference on Service-Oriented Computing and Applications (SOCA'09), December 14-15, Taipei, Taiwan. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_178390.pdf download])
-  * C. Eis, C. Huemer, P. Liegl, C. Pichler, and M. Strommer. A Framework for Managing the Complexity of Business Document Integration. In Proceedings of the eChallenges e-2009 Conference and Exhibition, October 21-23, Istanbul, Turkey, pages 1-8, 2009 ([http://publik.tuwien.ac.at/files/PubDat_178392.pdf download])
-  * P. Liegl and D. Mayrhofer. A Domain Specific Language for UN/CEFACT's Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 123-131. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177768.pdf download])
-  * C. Eis, P. Liegl, C. Pichler, and M. Strommer. An Evaluation of Mapping Strategies for Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 140-149. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177766.pdf download])
-  * P. Liegl, C. Huemer, and M. Zapletal. Towards a global business document reference ontology. In Proceedings of the Third IEEE International Conference on Semantic Computing (ICSC2009), September 14-16, Berkeley, CA, USA, pages 355-360. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177763.pdf download])
-  * P. Liegl. Conceptual Business Document Modeling using UN/CEFACT's Core Components. In Proceedings of the 6th Asia-Pacific Conference on Conceptual Modeling (APCCM2009), January 20-23, Wellington, New Zealand, pages 59-69. Australian Computer Society, 2009 ([http://publik.tuwien.ac.at/files/PubDat_173511.pdf download])
-  * C. Huemer, P. Liegl, T. Motal, R. Schuster, and M. Zapletal. The Development Process of the UN/CEFACT Modeling Methodology. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-10. ACM, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166115.pdf download])
-  * C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. A 3-level e-Business Registry Meta Model. In Proceedings of the IEEE International Conference on Services Computing (SCC2008), July 8-11, Honolulu, HI, USA, pages 450-451. IEEE, 2008 ([http://publik.tuwien.ac.at/files/PubDat_165760.pdf download])
-  * P. Liegl. Business documents in a service oriented context. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-5, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166117.pdf download])
-  * P. Liegl, T. Motal, and R. Schuster. An Add-In for UN/CEFACT's Modeling Methodology 2.0. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-2, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166116.pdf download])
-  * C. Huemer and P. Liegl. A UML Profile for Core Components and their Transformation to XSD. In Proceedings of the 2nd International Workshop on Services Engineering (SEIW 2007), April 16, Istanbul, Turkey, pages 298-306. IEEE, 2007 ([http://www.big.tuwien.ac.at/research/publications/2007/2207.pdf download])
-  * B. Hofreiter, C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. UN/CEFACT's Modeling Methodology (UMM): A UML Profile for B2B e-Commerce. In Proceedings of the 2nd International Workshop on Best Practices of UML (ER BP-UML'06), November 6-9, Tucson, AZ, USA, pages 19-31. IEEE, 2006 ([http://www.ec.tuwien.ac.at/~marco/pub/A_UML_Profile_For_B2B_eCommerce.pdf download])
+  * C. Pichler, M. Strommer, and P. Liegl. On Mapping Business Document Models to Core Components. In Proceedings of the Hawaii Interna- tional Conference on System Sciences (HICSS-43), January 5-8, Kauai, HI, USA, pages 1-10. IEEE, 2010 ([http://publik.tuwien.ac.at/files/PubDat_178389.pdf pdf])
+  * C. Huemer, P. Liegl, and C. Pichler. A registry model for UN/CEFACT's Core Components. In Proceedings of IEEE International Conference on Service-Oriented Computing and Applications (SOCA'09), December 14-15, Taipei, Taiwan. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_178390.pdf pdf])
+  * C. Eis, C. Huemer, P. Liegl, C. Pichler, and M. Strommer. A Framework for Managing the Complexity of Business Document Integration. In Proceedings of the eChallenges e-2009 Conference and Exhibition, October 21-23, Istanbul, Turkey, pages 1-8, 2009 ([http://publik.tuwien.ac.at/files/PubDat_178392.pdf pdf])
+  * P. Liegl and D. Mayrhofer. A Domain Specific Language for UN/CEFACT's Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 123-131. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177768.pdf pdf])
+  * C. Eis, P. Liegl, C. Pichler, and M. Strommer. An Evaluation of Mapping Strategies for Core Components. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), September 21-25, Bangalore, India, pages 140-149. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177766.pdf pdf])
+  * P. Liegl, C. Huemer, and M. Zapletal. Towards a global business document reference ontology. In Proceedings of the Third IEEE International Conference on Semantic Computing (ICSC2009), September 14-16, Berkeley, CA, USA, pages 355-360. IEEE, 2009 ([http://publik.tuwien.ac.at/files/PubDat_177763.pdf pdf])
+  * P. Liegl. Conceptual Business Document Modeling using UN/CEFACT's Core Components. In Proceedings of the 6th Asia-Pacific Conference on Conceptual Modeling (APCCM2009), January 20-23, Wellington, New Zealand, pages 59-69. Australian Computer Society, 2009 ([http://publik.tuwien.ac.at/files/PubDat_173511.pdf pdf])
+  * C. Huemer, P. Liegl, T. Motal, R. Schuster, and M. Zapletal. The Development Process of the UN/CEFACT Modeling Methodology. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-10. ACM, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166115.pdf pdf])
+  * C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. A 3-level e-Business Registry Meta Model. In Proceedings of the IEEE International Conference on Services Computing (SCC2008), July 8-11, Honolulu, HI, USA, pages 450-451. IEEE, 2008 ([http://publik.tuwien.ac.at/files/PubDat_165760.pdf pdf])
+  * P. Liegl. Business documents in a service oriented context. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-5, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166117.pdf pdf])
+  * P. Liegl, T. Motal, and R. Schuster. An Add-In for UN/CEFACT's Modeling Methodology 2.0. In Proceedings of the 10th International Conference on Electronic Commerce (ICEC08), August 19-22, Innsbruck, Austria, pages 1-2, 2008 ([http://publik.tuwien.ac.at/files/PubDat_166116.pdf pdf])
+  * C. Huemer and P. Liegl. A UML Profile for Core Components and their Transformation to XSD. In Proceedings of the 2nd International Workshop on Services Engineering (SEIW 2007), April 16, Istanbul, Turkey, pages 298-306. IEEE, 2007 ([http://www.big.tuwien.ac.at/research/publications/2007/2207.pdf pdf])
+  * B. Hofreiter, C. Huemer, P. Liegl, R. Schuster, and M. Zapletal. UN/CEFACT's Modeling Methodology (UMM): A UML Profile for B2B e-Commerce. In Proceedings of the 2nd International Workshop on Best Practices of UML (ER BP-UML'06), November 6-9, Tucson, AZ, USA, pages 19-31. IEEE, 2006 ([http://www.ec.tuwien.ac.at/~marco/pub/A_UML_Profile_For_B2B_eCommerce.pdf pdf])
