Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -37,3 +37,4 @@
     * [PassportModel VIENNA AddIn Passport Modeling]
   * [UseCases Use Cases]
   * [PublicationsPPI Publications]
+  * [Education Education]
