Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -38,3 +38,5 @@
   * [UseCases Use Cases]
   * [PublicationsPPI Publications]
   * [Education Education]
+    * [Trainer Trainer]
+    * [TrainTheTrainer Train-the-Trainer]
