Edited wiki page Training through web user interface.

--- a/wiki/Training.wiki
+++ b/wiki/Training.wiki
@@ -1,13 +1,9 @@
-#summary One-sentence summary of this page.
-
 = Introduction =
 
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+  * Introduction to [http://vienna-add-in.googlecode.com/files/E61_1_Introduction_to_Service_Engineering.pdf Service Engineering]
+  * [http://code.google.com/p/vienna-add-in/downloads/detail?name=2_Core_Components.pdf Core Components]
+  * A UML Profile for Core Components ([http://vienna-add-in.googlecode.com/files/3_UPCC.pdf UPCC 3.0])
+  * UN/CEFACT's Modeling Methodology ([http://vienna-add-in.googlecode.com/files/4_UMM.pdf UMM])
+  * UN/CEFACT's Core Component Library ([http://vienna-add-in.googlecode.com/files/5_CCL.pdf CCL])
+  * UN/CEFACT Naming and Design Rules ([http://vienna-add-in.googlecode.com/files/6_NDR.pdf NDR])
+  * The [http://vienna-add-in.googlecode.com/files/7_VIENNAAddIn.pdf ViennaAddIn]
