Edited wiki page Training through web user interface.

--- a/wiki/Training.wiki
+++ b/wiki/Training.wiki
@@ -1,9 +1,14 @@
-= Introduction =
+= Introduction to [http://vienna-add-in.googlecode.com/files/E61_1_Introduction_to_Service_Engineering.pdf Service Engineering] =
+Successful introduction of Service-Oriented Architectures (SOA) using Business Process Choreographies and Business Document Standards
 
-  * Introduction to [http://vienna-add-in.googlecode.com/files/E61_1_Introduction_to_Service_Engineering.pdf Service Engineering]: Successful introduction of Service-Oriented Architectures (SOA) using Business Process Choreographies and Business Document Standards
-  * [http://code.google.com/p/vienna-add-in/downloads/detail?name=2_Core_Components.pdf Core Components]
-  * A UML Profile for Core Components ([http://vienna-add-in.googlecode.com/files/3_UPCC.pdf UPCC 3.0])
-  * UN/CEFACT's Modeling Methodology ([http://vienna-add-in.googlecode.com/files/4_UMM.pdf UMM])
-  * UN/CEFACT's Core Component Library ([http://vienna-add-in.googlecode.com/files/5_CCL.pdf CCL])
-  * UN/CEFACT Naming and Design Rules ([http://vienna-add-in.googlecode.com/files/6_NDR.pdf NDR])
-  * The [http://vienna-add-in.googlecode.com/files/7_VIENNAAddIn.pdf ViennaAddIn]
+= [http://code.google.com/p/vienna-add-in/downloads/detail?name=2_Core_Components.pdf Core Components] =
+
+= A UML Profile for Core Components ([http://vienna-add-in.googlecode.com/files/3_UPCC.pdf UPCC 3.0]) =
+
+= UN/CEFACT's Modeling Methodology ([http://vienna-add-in.googlecode.com/files/4_UMM.pdf UMM])= 
+
+= UN/CEFACT's Core Component Library ([http://vienna-add-in.googlecode.com/files/5_CCL.pdf CCL]) =
+
+= UN/CEFACT Naming and Design Rules ([http://vienna-add-in.googlecode.com/files/6_NDR.pdf NDR]) =
+
+= The [http://vienna-add-in.googlecode.com/files/7_VIENNAAddIn.pdf ViennaAddIn] =
