--- a/wiki/TrainTheTrainer.wiki
+++ b/wiki/TrainTheTrainer.wiki
@@ -1,13 +1,9 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+  # Installer (tbd)
+  # Create a default [http://umm-dev.org/wp-content/videos/getting_started_video_create_default_upcc_sample_model.htm UPCC sample model]
+  # Create BDTs using the [http://umm-dev.org/wp-content/videos/getting_started_video_create_bdt_using_the_bdt_editor.htm BDT Editor]
+  # Create ABIEs using the [http://umm-dev.org/wp-content/videos/passport_part_2.htm ABIE Editor]
+  # Using the [http://umm-dev.org/wp-content/videos/tool-demo-2.htm toolbox] to create UPCC artifacts
+  # Using the [http://umm-dev.org/wp-content/videos/passport_part_2.htm DOC Library] to assemble BIEs to a actual model
+  # Subsetting Wizard (tbd)
+  # Importing UMM & UPCC into EA (tbd)
+  # Importing a MapForce mapping file (tbd)
