--- a/wiki/TrainTheTrainer.wiki
+++ b/wiki/TrainTheTrainer.wiki
@@ -1,3 +1,4 @@
+The Train-the-Trainer education offers an in-depth introduction to the usage of the VIENNA Add-In and the principles of Core Components. The provided screencasts should enable trainers to successfully teach their trainees the concepts of UML modeling and the usage of the VIENNA Add-In.
   # Installer (tbd)
   # Create a default [http://umm-dev.org/wp-content/videos/getting_started_video_create_default_upcc_sample_model.htm UPCC sample model]
   # Create BDTs using the [http://umm-dev.org/wp-content/videos/getting_started_video_create_bdt_using_the_bdt_editor.htm BDT Editor]
