--- a/wiki/TrainTheTrainer.wiki
+++ b/wiki/TrainTheTrainer.wiki
@@ -1,6 +1,6 @@
 The Train-the-Trainer education offers an in-depth introduction to the usage of the VIENNA Add-In and the principles of Core Components. The provided screencasts should enable trainers to successfully teach their trainees the concepts of UML modeling and the usage of the VIENNA Add-In.
   # [InstallerVideo Installer]
-  # Setting up [UMMSetupVideo UMM] & [UPCCSetupVideo UPCC] environment in Enterprise Architect (tbd)
+  # Setting up [UMMSetupVideo UMM] & [UPCCSetupVideo UPCC] environment in Enterprise Architect
   # Create a default [http://umm-dev.org/wp-content/videos/getting_started_video_create_default_upcc_sample_model.htm UPCC sample model]
   # Using the [http://umm-dev.org/wp-content/videos/tool-demo-2.htm toolbox] to create UPCC artifacts
   # Create BDTs using the [http://umm-dev.org/wp-content/videos/getting_started_video_create_bdt_using_the_bdt_editor.htm BDT Editor]
