--- a/wiki/TrainTheTrainer.wiki
+++ b/wiki/TrainTheTrainer.wiki
@@ -6,5 +6,5 @@ The Train-the-Trainer education offers an in-depth introduction to the usage of 
   # Create BDTs using the [http://umm-dev.org/wp-content/videos/getting_started_video_create_bdt_using_the_bdt_editor.htm BDT Editor]
   # Create ABIEs using the [http://umm-dev.org/wp-content/videos/passport_part_2.htm ABIE Editor]
   # Using the [http://umm-dev.org/wp-content/videos/passport_part_2.htm DOC Library] to assemble BIEs to a actual model
-  # Subsetting Wizard (tbd)
-  # Importing a Map Force mapping file (tbd)
+  # Create a model subset using the [SubsettingWizardVideo Subsetting Wizard] (tbd)
+  # Importing a [MapForceMappingVideo MapForce] mapping file (tbd)
