--- a/wiki/TrainTheTrainer.wiki
+++ b/wiki/TrainTheTrainer.wiki
@@ -8,3 +8,4 @@ The Train-the-Trainer education offers an in-depth introduction to the usage of 
   # Using the [http://umm-dev.org/wp-content/videos/passport_part_2.htm DOC Library] to assemble BIEs to a actual model
   # Create a model subset using the [SubSettingWizardVideo Subsetting Wizard]
   # Using Map Force mapping files with the [XmlSchemaImporterVideo XML Schema Importer]
+    # Create mappings using [MapForceMappingVideo Altova MapForce]
