--- a/wiki/PublicationsPPI.wiki
+++ b/wiki/PublicationsPPI.wiki
@@ -6,7 +6,7 @@ Conference and Workshop Papers
   * M. Strommer, C. Pichler, P. Liegl. *A Document Management Framework based on Core Components*. In Proceedings of the 12th IEEE Conference on Commerce and Enterprise Computing (CEC), November 10-12, Shanghai, China, IEEE, 2010.([http://publik.tuwien.ac.at/files/PubDat_189060.pdf pdf])
   * P. Liegl, C. Huemer, C. Pichler. *A bottom-up approach to build XML business document standards*. In Proceedings of the 7th IEEE International Conference on e-Business Engineering (ICEBE), November 10-12, Shanghai, China, IEEE, 2010.([http://publik.tuwien.ac.at/files/PubDat_189059.pdf pdf])
   * P. Liegl, M. Zapletal, C. Pichler, and M. Strommer. *State-of-the-art in business document standards*. In Proceedings of the 8th IEEE International Conference on Industrial Informatics (INDIN2010), July 14-16, Osaka, Japan, 2010.([http://publik.tuwien.ac.at/files/PubDat_186928.pdf pdf])
-  * C. Pichler, M. Strommer, and C. Huemer. *Size Matters!? Measuring the Complexity of XML Schema Mapping Models*. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), July 5 -10, Miami, Florida, 2010. (to appear)
+  * C. Pichler, M. Strommer, and C. Huemer. *Size Matters!? Measuring the Complexity of XML Schema Mapping Models*. In Proceedings of the International Workshop on Service Computing for B2B (SC4B2B), July 5 -10, Miami, Florida, 2010. ([http://publik.tuwien.ac.at/files/PubDat_187939.pdf pdf])
   * C. Pichler, M. Seidl, and C. Huemer. *Managing Variability and Evolution of Business Document Models*. In 2nd International Workshop on Model-Driven Product Line Engineering (MDPLE), June 15 - 18, Paris, France, 2010. ([http://ceur-ws.org/Vol-625/MDPLE2010-paper6-Pichler.pdf pdf])
   * C. Pichler. *A Framework for Handling Variants of Software Models*. In Proceedings of the International Conference on Software Engineering (ICSE), May 2 - 8, Cape Town, South Africa, pages 345-346. ACM/IEEE, 2010
   * C. Pichler, M. Strommer, and P. Liegl. *On Mapping Business Document Models to Core Components*. In Proceedings of the Hawaii Interna- tional Conference on System Sciences (HICSS-43), January 5-8, Kauai, HI, USA, pages 1-10. IEEE, 2010 ([http://publik.tuwien.ac.at/files/PubDat_178389.pdf pdf])
