--- a/wiki/Release_Notes.wiki
+++ b/wiki/Release_Notes.wiki
@@ -1,5 +1,17 @@
 #summary Release Notes.
 
+= VIENNAAddIn_0.1.2 =
+
+ * XSLT Generator for instance transformation added 
+ * Bug fixes
+
+
+= VIENNAAddIn_0.1.1 =
+
+ * Subsetting Wizard added
+ * Bug fix release
+
+
 = VIENNAAddIn_0.1.0 =
 
  * WSDL Generator
@@ -13,14 +25,11 @@
  * Bug fixes
 
 
-
-
 = VIENNAAddIn_0.0.8 =
 
  * XSD Schema Analyzer
  * XSD Importer
  * Bug fixes
-
 
 
 = VIENNAAddIn_0.0.7 =
@@ -31,14 +40,11 @@
  * Bug fixes
 
 
-
-
 = VIENNAAddIn_0.0.6 =
 
  * Updated wizards for creation of ABIEs and BDTs
  * Importer for Core Component Library CCL 09A and CCL 08B
  * Major bugfixes
-
 
 
 = VIENNAAddIn_0.0.5 (build 659) =
